*Empty MediaWiki Message*

--- a/Arjagnu.mw
+++ b/Arjagnu.mw
@@ -1,8 +1,11 @@
 {{Databox}}
-{{Datastub}}
-[[Tugna:Qlilu blackstonia grandiflora.jpg|thumb|Blackstonia perfoliata<ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref> - Qlilu]]
-[[Tugna:Centaurium pulchellumkz1.jpg|thumb|Centaurium pulchellum<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref> - Qlilu]]
-[[Tugna:Blackstonia_perfoliata1.jpg|thumb|Blackstonia perfoliata - Qlilu]]
+'''Arjagnu''' neɣ '''Aqlilu''' ([[Assaɣ ussnan]]: '''Centaurea''') d [[tawsit (tudersent)|tawsit]] n [[ imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tatrawt|tetrawt]]. Tawsit-a tga d yiwet gar tewsitin yettwassnen yakk deg twacult-is
+
+Arjagnu neɣ Aqlilu d tawsit yudsen neɣ id yettilin i [[taɣeddiwt|tɣeddiwt]] d 
+
+== Aglam ==
+
+== Umuɣ n telmas ==
 
 == Tilmas ==
 *
