*Empty MediaWiki Message*

--- a/Arjagnu.mw
+++ b/Arjagnu.mw
@@ -7,6 +7,12 @@ Arjagnu neɣ Aqlilu d tawsit yudsen neɣ id yettilin i [[taɣeddiwt|tɣeddiwt]] 
 
 == Umuɣ n telmas ==
 
+* [[Azemmun (imɣi)|Azemmun]] — (''Centaurea diluta'')
+* [[Tafra]] — (''Centaurea pubescens'')
+* [[Ittim]] — (''Centaurea melitensis'') 
+* [[Arjaknu]] — (''Centaurea acaulis'') 
+*
+
 == Tilmas ==
 *
 
