*Empty MediaWiki Message*

--- a/Arjagnu.mw
+++ b/Arjagnu.mw
@@ -11,7 +11,8 @@ Arjagnu neɣ Aqlilu d tawsit yudsen neɣ id yettilin i [[taɣeddiwt|tɣeddiwt]] 
 * [[Tafra]] — (''Centaurea pubescens'')
 * [[Ittim]] — (''Centaurea melitensis'') 
 * [[Arjaknu]] — (''Centaurea acaulis'') 
-*
+* [[Ǧuz|Uzag]] — (''Centaurea pullata'')
+* [[Tafrat]] — (''Centaurea seridis'')
 
 == Tilmas ==
 *
