*Empty MediaWiki Message*

--- a/Arjagnu.mw
+++ b/Arjagnu.mw
@@ -14,8 +14,7 @@ Arjagnu neɣ Aqlilu d tawsit yudsen neɣ id yettilin i [[taɣeddiwt|tɣeddiwt]] 
 * [[Ǧuz|Uzag]] — (''Centaurea pullata'')
 * [[Tafrat]] — (''Centaurea seridis'')
 
-== Tilmas ==
-*
+== Tiwlafin n telmas ==
 
 == Isseqdac ==
 
