*Empty MediaWiki Message*

--- a/Arjagnu.mw
+++ b/Arjagnu.mw
@@ -21,3 +21,7 @@ Arjagnu neɣ Aqlilu d tawsit yudsen neɣ id yettilin i [[taɣeddiwt|tɣeddiwt]] 
 == Tiwelhiwin ==
 
 [[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n twacult n tetrawin]]
+[[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:Tatrawt]]
+[[Taggayt:Arjagnu]]
