*Empty MediaWiki Message*

--- a/Tirmitin.mw
+++ b/Tirmitin.mw
@@ -21,9 +21,9 @@
 [[File:Zerrouda2010 024.JPG|thumb|left|Iẓṛi n taddart n Izerruden.]]
 *Abarran 
 *Azemmur U Meryem
-*Begdul 
+*Amegdul
 *Iɣil N Weɣyul
-*Iɣil Laɛzib
+*Iɣil Aɛzib
 *Iɣil Ugemmun 
 *Izennuten 
 *Mnaṣṣera 
@@ -34,6 +34,9 @@
 *Taẓrut
 *Tirmitin 
 *Izerruden
+*Aɛrur
+*Aɛrqub
+
 
 
 
