*Empty MediaWiki Message*

--- a/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
+++ b/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
@@ -1,3 +1,5 @@
 '''Agraw amatu n yeɣlanen yeddukklen''' d yiwen gar 6 imeẓla igejdanen n [[Tuddsa n Yeɣlanen Yeddukklen|Yeɣlanen Yeddukklen]], dɣa tga d tasudut tamyiwent anda yakk [[umuɣ n iwunak igmamen deg Yeɣlanen Yeddukklen|iwunak igmamen]] gdan (msawan) deg ugenses akken iga d ameẓlu agejdan i tmugri [[tasertit tazayezt|tsartit]] d ugenses g Yeɣlanen Yeddukklen. Tiwuriwin-is gant d amday ɣef [[umuɣ n umarud amatu|umarud]] n [[Tuddsa n Yeɣlanen Yeddukklen|Yeɣlanen Yeddukklen]] d umager n illasen neɣ ineqqisen seg yimuren n iden n  Yeɣlanen Yeddukklen d tnefkiwt n isegdal s talɣa n [[taneɣtust n wegraw amatu n yeɣlanen yeddukklen|tneɣytust n wegraw amatu n yeɣlanen yeddukklen]]. Akken daɣen id tt-wesnulfan waṭas n imeẓla ifurkanen
 
-Agraw amatu y-tt-msegraw yiwet n tikkelt yal aseggas s ddaw n tisselwit [[amaray amatu n Yeɣlanen Yeddukklen|umaray-ines amatu]] g [[tadabut n Yeɣlanen Yeddukklen|tdabut-is]] yellan di temdint n [[New York]] akken daɣan i zemrent ad ilin-t tɣimiyin timeslidin deg wakuden n iden aladɣa deg
+Agraw amatu y-tt-msegraw yiwet n tikkelt yal aseggas s ddaw n tisselwit [[amaray amatu n Yeɣlanen Yeddukklen|umaray-ines amatu]] g [[tadabut n Yeɣlanen Yeddukklen|tdabut-is]] yellan di temdint n [[New York]] akken daɣan i zemrent ad ilin-t tɣimiyin timeslidin deg wakuden n iden aladɣa deg tegnatin timsarin 
+
+Ayli wis 4 n [[arkawal n Yeɣlanen Yeddukklen|arkawal n Yeɣlanen Yeddukklen]] yessenmalay-d (yett-beggin-d) tisgert-is d [[tawuri|twiriwin-is]] d tefranin-is d tsekkerin-is. Dɣa tiɣimit tamezwarut yakk n wegraw amatu yella-d ass n [[10 yennayer]] i wseggas n [[1946]] deg temdint n London s tihawt n igensasen n 51 n iwunak
