--- a/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
+++ b/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
@@ -3,3 +3,8 @@
 Agraw amatu y-tt-msegraw yiwet n tikkelt yal aseggas s ddaw n tisselwit [[amaray amatu n Yeɣlanen Yeddukklen|umaray-ines amatu]] g [[tadabut n Yeɣlanen Yeddukklen|tdabut-is]] yellan di temdint n [[New York]] akken daɣan i zemrent ad ilin-t tɣimiyin timeslidin deg wakuden n iden aladɣa deg tegnatin timsarin 
 
 Ayli wis 4 n [[arkawal n Yeɣlanen Yeddukklen|arkawal n Yeɣlanen Yeddukklen]] yessenmalay-d (yett-beggin-d) tisgert-is d [[tawuri|twiriwin-is]] d tefranin-is d tsekkerin-is. Dɣa tiɣimit tamezwarut yakk n wegraw amatu yella-d ass n [[10 yennayer]] i wseggas n [[1946]] deg temdint n London s tihawt n igensasen n 51 n iwunak
+
+Adɣar deg wegraw amatu d win yezzin ɣef tilufa 
+
+
+== Tikkest tamazrayt ==
