*Empty MediaWiki Message*

--- a/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
+++ b/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
@@ -4,7 +4,8 @@ Agraw amatu y-tt-msegraw yiwet n tikkelt yal aseggas s ddaw n tisselwit [[amaray
 
 Ayli wis 4 n [[arkawal n Yeɣlanen Yeddukklen|arkawal n Yeɣlanen Yeddukklen]] yessenmalay-d (yett-beggin-d) tisgert-is d [[tawuri|twiriwin-is]] d tefranin-is d tsekkerin-is. Dɣa tiɣimit tamezwarut yakk n wegraw amatu yella-d ass n [[10 yennayer]] i wseggas n [[1946]] deg temdint n London s tihawt n igensasen n 51 n iwunak
 
-Adɣar deg wegraw amatu d win yezzin ɣef tilufa 
+Adɣar deg wegraw amatu d win yezzin ɣef tlufa yellumẓen (ihummen) iseɣlafen yeqqnen ar [[talwit|telwit]] d [[taɣellist|tɣellist]] 
 
+Deg iseggasen n 80, Agraw amatu yuɣal d annar i wdiwenni gar tmura n Ugafa d tid n unẓul. Amdya ɣef wanect-a d ameslay ɣef tlufa d tisra gar n [[Amadal amezwaru|tmura timugranin]] d
 
 == Tikkest tamazrayt ==
