*Empty MediaWiki Message*

--- a/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
+++ b/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
@@ -6,6 +6,6 @@ Ayli wis 4 n [[arkawal n Yeɣlanen Yeddukklen|arkawal n Yeɣlanen Yeddukklen]] y
 
 Adɣar deg wegraw amatu d win yezzin ɣef tlufa yellumẓen (ihummen) iseɣlafen yeqqnen ar [[talwit|telwit]] d [[taɣellist|tɣellist]] 
 
-Deg iseggasen n 80, Agraw amatu yuɣal d annar i wdiwenni gar tmura n Ugafa d tid n unẓul. Amdya ɣef wanect-a d ameslay ɣef tlufa d tisra gar n [[Amadal amezwaru|tmura timugranin]] d
+Deg iseggasen n 80, Agraw amatu yuɣal d annar i wdiwenni gar tmura n Ugafa d tid n unẓul. Amdya ɣef wanect-a d ameslay ɣef tlufa d tisra gar n [[Amadal amezwaru|tmura timugranin]] d [[Tamurt tamesneflalit|tmura timesnflalin]], Dɣa tilufa ayyi nnulfan-tt-d s usrag (s ssebba) n gemmu d usmeskel deg tsuddest n tegmant n Yeɣlanen Yeddukklen anda deg useggas n 1945 llan dges anagar 51 n yigmamen ma d tura llant 193 n tmura d tigmamin gar-asent sin n ikṛaden (⅔) d timura timesnflalin annect-a yeǧǧa neɣ yefka tagnit i tmura ayyi ad grent ahil n wegraw amatu (s usexdem n tegrawin timsidag am [[tagrawt n 77|tegrawt n 77]])
 
 == Tikkest tamazrayt ==
