--- a/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
+++ b/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
@@ -11,3 +11,11 @@ Deg iseggasen n 80, Agraw amatu yuɣal d annar i wdiwenni gar tmura n Ugafa d ti
 == Tikkest tamazrayt ==
 
 == Altaɣ ==
+
+== Ihilen ==
+
+== Tineɣtas ==
+
+== Tifranin ==
+
+== Tiɣimiyin tusligin d
