*Empty MediaWiki Message*

--- a/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
+++ b/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
@@ -18,4 +18,8 @@ Deg iseggasen n 80, Agraw amatu yuɣal d annar i wdiwenni gar tmura n Ugafa d ti
 
 == Tifranin ==
 
-== Tiɣimiyin tusligin d
+== Tiɣimiyin tusligin d timeslidin ==
+
+== Tiɣimiyin timeslidin timsarin ==
+
+==
