*Empty MediaWiki Message*

--- a/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
+++ b/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
@@ -22,4 +22,16 @@ Deg iseggasen n 80, Agraw amatu yuɣal d annar i wdiwenni gar tmura n Ugafa d ti
 
 == Tiɣimiyin timeslidin timsarin ==
 
-==
+== Imeẓla ifurkanen ==
+
+== Tiɣimiyin n wegraw ==
+
+== Iɣbula ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Agraw amatu n Yeɣlanen Yeddukklen]]
+[[Taggayt:Imeẓla n Yeɣlanen Yeddukklen]]
+[[Taggayt:Iwunak igmamen deg Yeɣlanen Yeddukklen]]
+[[Taggayt:Tuddsiwin id yennulfan deg 1945]]
+[[Taggayt:Tisuda n Yeɣlanen Yeddukklen]]
