--- a/Tiqeslin_n_ubabdar.mw
+++ b/Tiqeslin_n_ubabdar.mw
@@ -1,29 +1,8 @@
-Si Wikipedia, tasanayt tilellit.
-{| class="wikitable"
-| colspan="2" |[[Tugna:Embonilhs - Umbilicus rupestris.jpg|vignette|Tiqeslin n ubabdar]]
-|-
-! colspan="2" |[[Tasensartut (tasnudert)|Tasensartut]]
-|-
-| colspan="2" |
-|-
-|Tagelda
-|[[Imɣi|Plantae]]
-|-
-|Tafesna
-|Saxifragales 
-|-
-|Tawacult
-|Crassulaceae 
-|-
-|tawsit
-|'''Umbilicus'''
-'''(Salisb.) Dandy, 1948'''
-|}
+{{Databox}}
 '''Tiqeslin n ubabdar''' ([[Isem usnan]]: ''Umbilicus rupestris'') d [[Tawsit (tudersent)|tawsit]] n [[Imɣi|yemɣi]] seg twacult n crassulaceae .
 
 
-
-== Ismawen[<nowiki/>[[Anekraf|ẓreg]] | [[Anekraf|ẓreg aɣbalu]]] ==
+== Ismawen ==
 
 * Isem-is s latinit: Umbilicus rupestris
 * Isem-is s tefransist: Nombril de venus
@@ -34,7 +13,3 @@ Si Wikipedia, tasanayt tilellit.
 tettmačča d cclaḍa neɣ terwi deg tmellalin
 
 telha i win isɛan ccin (Lembaṣer), tesefsay iblaḍen deg tembult, ttdawin seg-s tiggest (lǧerḥ) d acu ttekksen-as ticlimt-ni s ufell!
-
-
-
-<br />
