--- a/Asennan_n_weɣyul.mw
+++ b/Asennan_n_weɣyul.mw
@@ -3,7 +3,7 @@
 [[Tugna:Asennan n weghyul IMG 2060.jpg|thumb|Silybum marianum - Asennan n weɣyul]]
 [[Tugna:Onopordum acanthium 002.JPG|thumb|Onopordum acanthium - Asennan n weɣyul]]
 
-'''Asennan n weɣyul''' neɣ '''isri''' ([[Assaɣ ussnan]]: '''Silybum marianum''') d [[talmest]] n [[imɣan|yemɣi]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[isri (tawsit)|yisri]] deg [[tawacult tasnudert|twacult]] n [[titrit|titriyyin]].
+'''Asennan n weɣyul''' neɣ '''Tadart wuccen''' ([[Assaɣ ussnan]]: '''Silybum marianum''') d [[talmest]] n [[imɣan|yemɣi]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[isri (tawsit)|yisri]] deg [[tawacult tasnudert|twacult]] n [[titrit|titriyyin]].
 
 == Idgan n wemɣay ==
 Yettemɣay-d deg tamiwin id yezzin i [[ilel agrakal|yilel agrakal]] d [[Turuft]].
