*Empty MediaWiki Message*

--- a/Asennan_n_weɣyul.mw
+++ b/Asennan_n_weɣyul.mw
@@ -8,11 +8,11 @@
 == Idgan n wemɣay ==
 Yettemɣay-d deg tamiwin id yezzin i [[ilel agrakal|yilel agrakal]] d [[Turuft]].
 
-== Ismawen ==
+== Tiwlafin n telmas ==
 *Isem-is s latinit: Silybum marianum, Onopordum acanthium
 *Isem-is s tefransist: Chardon Marie, Chardon aux ânes
 *Ismawen-is nniḍen s teqbaylit: 
-*Ismawen-is nniḍen s tmaziɣt: 
+*Ismawen-is nniḍen s tmaziɣt:
 
 == Isseqdac ==
 
