--- a/Asennan_n_weɣyul.mw
+++ b/Asennan_n_weɣyul.mw
@@ -1,7 +1,7 @@
 {{Automatic taxobox}}
 '''Asennan n weɣyul''' neɣ '''isri''' neɣ '''Tadart wuccen''' ([[Assaɣ ussnan]]: '''Silybum marianum''') d [[talmest]] n [[imɣan|yemɣi]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[isri (tawsit)|yisri]] deg [[tawacult tasnudert|twacult]] n [[titrit|titriyyin]].
 
-== Idgan n wemɣay ==
+== Ideggan n wemɣay ==
 Yettemɣay-d deg tamiwin id yezzin i [[ilel agrakal|yilel agrakal]] d [[Turuft]].
 
 == Tiwlafin n telmas ==
