*Empty MediaWiki Message*

--- a/Asennan_n_weɣyul.mw
+++ b/Asennan_n_weɣyul.mw
@@ -4,11 +4,10 @@
 == Ideggan n wemɣay ==
 Yettemɣay-d deg tamiwin id yezzin i [[ilel agrakal|yilel agrakal]] d [[Turuft]].
 
-== Tiwlafin n telmas ==
-*Isem-is s latinit: Silybum marianum, Onopordum acanthium
-*Isem-is s tefransist: Chardon Marie, Chardon aux ânes
-*Ismawen-is nniḍen s teqbaylit: 
-*Ismawen-is nniḍen s tmaziɣt:
+== Tiwlafin ==
+[[Tugna:Asennan n weɣyul IMG 2055.jpg|thumb|Silybum marianum - Asennan n weɣyul<ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref><ref>Ḍil ad twaliḍ, ruḥ ad d-tawiḍ, qim ulac. Omar Kerdja, Edition Tira</ref>]]
+[[Tugna:Asennan n weghyul IMG 2060.jpg|thumb|Silybum marianum - Asennan n weɣyul]]
+[[Tugna:Onopordum acanthium 002.JPG|thumb|Onopordum acanthium - Asennan n weɣyul]]
 
 == Isseqdac ==
 
