*Empty MediaWiki Message*

--- a/Asennan_n_weɣyul.mw
+++ b/Asennan_n_weɣyul.mw
@@ -10,6 +10,7 @@ Yettemɣay-d deg tamiwin id yezzin i [[ilel agrakal|yilel agrakal]] d [[Turuft]]
 [[Tugna:Onopordum acanthium 002.JPG|thumb|Onopordum acanthium - Asennan n weɣyul]]
 
 == Isseqdac ==
+Asennan weɣyul d win ilan (yesɛan) s agensu n tedra-ynes (daxel n ljedra-ynes) aman yemmugen am uyefki, dɣa aman-nni lhan s waṭas i wsuji n [[tasa]]
 
 == Tiwelhiwin ==
 {{refs}}
