*Empty MediaWiki Message*

--- a/Asennan_n_weɣyul.mw
+++ b/Asennan_n_weɣyul.mw
@@ -15,3 +15,7 @@ Asennan weɣyul d win ilan (yesɛan) s agensu n tedra-ynes (daxel n ljedra-ynes)
 == Tiwelhiwin ==
 {{refs}}
 [[Taggayt:Imɣan]]
+[[Taggayt:Isri]]
+[[Taggayt:Imɣan yettwaččen]]
+[[Taggayt:Tatrawt]]
+[[Taggayt:Imɣan isnajyanen]]
