*Empty MediaWiki Message*

--- a/Asennan_n_weɣyul.mw
+++ b/Asennan_n_weɣyul.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Asennan n weɣyul''' neɣ '''isri''' neɣ '''Tadart wuccen''' ([[Assaɣ ussnan]]: '''Silybum marianum''') d [[talmest]] n [[imɣan|yemɣi]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[isri (tawsit)|yisri]] deg [[tawacult tasnudert|twacult]] n [[titrit|titriyyin]].
+'''Asennan n weɣyul''' neɣ '''isri''' neɣ '''Tadart wuccen''' ([[Assaɣ ussnan]]: '''Silybum marianum''') d [[talmest]] n [[imɣan|yemɣi]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[isri (tawsit)|yisri]] deg [[tawacult (tasnudert)|twacult]] n [[titrit|tetrawt]].
 
 == Ideggan n wemɣay ==
 Yettemɣay-d deg tamiwin id yezzin i [[ilel agrakal|yilel agrakal]] d [[Turuft]].
