--- a/Taɣeddiwt.mw
+++ b/Taɣeddiwt.mw
@@ -22,5 +22,6 @@ Imɣan-a d wid id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Ameɣreb ase
 
 [[Taggayt:Imɣan]]
 [[Taggayt:Tiwsitin n yimɣan]]
-[[Taggayt: Tiwsitin n twacult n tetrawin]]
+[[Taggayt:Tiwsitin n twacult n tetrawin]]
 [[Taggayt:Tatrawt]]
+[[Taggayt:Imɣan yettwaččen]]
