*Empty MediaWiki Message*

--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -18,6 +18,7 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 * [[Tasdella]] neɣ [[Tasdella|Amsekli]] — ([[Assaɣ ussnan|a.u]]: '''Echinacea''')
 * [[Taɣeddiwt]] — ([[Assaɣ ussnan|a.u]]: '''Cirsium''')
 * [[Aderyun]] neɣ [[Aderyun|Taysa]] neɣ [[Aderyun|Buzduz]] — ([[Assaɣ ussnan|a.u]]: '''Chrysanthemum''')
+* [[Tizifut]] — ([[Assaɣ ussnan|a.u]]: '''Scolymus''')
 
 == Ẓeṛ daɣen ==
 
