*Empty MediaWiki Message*

--- a/Izifu.mw
+++ b/Izifu.mw
@@ -13,6 +13,6 @@ Talmest d tin id yettemɣayen deg yideggan yezzin i [[ilel agrakal|yilel agrakal
 
 == Ẓeṛ daɣen ==
 
-Imɣan
-Tizifut
-Imɣan yettwaččen
+[[Taggayt:Imɣan]]
+[[Taggayt:Tizifut]]
+[[Taggayt:Imɣan yettwaččen]]
