*Empty MediaWiki Message*

--- a/Izifu.mw
+++ b/Izifu.mw
@@ -1,7 +1,7 @@
 {{Automatic taxobox}}
 '''izifu''' ('''ⵉⵣⵉⴼⵓ''') ([[Assaɣ ussnan]]: '''Scolymus grandiflorus''') d [[talmest]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[Tawsit (tudersent)|tawsit]] n [[tizifut|tzifut]] yettekkin g [[tawacult (tasnudert)|twacult]] n [[Tatrawt|tetrawt]] 
 
-Izifu d imɣi yettemcabin ar [[taɣeddiwt|tɣeddiwt]] d [[isri (talmest)|yisri]] dɣa tilmas-a yakk zdint deg yiwet n tewsit ([[tizifit]]) 
+Izifu d imɣi yettemcabin ar [[taɣeddiwt|tɣeddiwt]] d [[isri (talmest)|yisri]] dɣa tilmas-a yakk zdint deg yiwet n tewsit ([[tizifut]])
 
 == Aglam ==
 
