Ssefsu tasiwelt 94113 sɣur [[Special:Contributions/Bilalbouyahia|Bilalbouyahia]] ([[User talk:Bilalbouyahia|Meslay]])

--- a/Arjagnu.mw
+++ b/Arjagnu.mw
@@ -16,6 +16,12 @@ Arjagnu neɣ Aqlilu d tawsit yudsen neɣ id yettilin i [[taɣeddiwt|tɣeddiwt]] 
 
 == Tiwlafin n telmas ==
 
+== Ismawen ==
+*Isem-is s latinit:  Blackstonia perfoliata ou Centaurium pulchellum
+*Isem-is s tefransist: Centaurée jaune ou Petite Centaurée délicate
+*Ismawen-is nniḍen s teqbaylit: 
+*Ismawen-is nniḍen s tmaziɣt: 
+
 == Isseqdac ==
 
 == Tiwelhiwin ==
