--- a/Tawelman.mw
+++ b/Tawelman.mw
@@ -11,6 +11,12 @@
 [[Tugna:Scorzonera hispanica 001.JPG|thumb|''Scorzonera hispanica''  - [[Tawelman taspenyult]]]]
 [[Tugna:Scorzonera hispanica 002.JPG|thumb|]]
 
+== Ismawen ==
+*Isem-is s latinit: Scorzonera hispanica
+*Isem-is s tefransist: La scorsonère d'Espagne
+*Ismawen-is nniḍen s teqbaylit: Tulma, Tawelman<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>
+*Ismawen-is nniḍen s tmaziɣt: 
+
 == Isseqdac ==
 
 == Tiwelhiwin ==
