*Empty MediaWiki Message*

--- a/Adren.mw
+++ b/Adren.mw
@@ -1,7 +1,7 @@
 {{Databox}}
 '''Adren''' neɣ '''ider''' ([[Assaɣ ussnan]]: '''Quercus''') d [[tawsit (tudersent)|tawsit]] n [[aseklu|Isekla]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tazzant]] tla (tesɛa) azal n 600 n [[talmest]] n tsafin d yider id yettemɣayen deg wezgen agafan n tegnit. amur ameqran deg-sent d isekla maca llant daɣen telmas ttemɣayent-d d [[tamdikt|timedkin]] neɣ d icekeryad (asget n ucekrid). Dɣa isekla n wedren d ticafcalin yerna tid [[imɣi imezgi|yettidiren aṭas n iseggasen]] (gar n 500 ar 2000 iseggasen)
 
-Isekla n wedren d tid ilan (yesɛan) tuggta meqqren deg wayen yezzin ɣef ubleɣ d tarrayt n wemɣay anda llant tmedkin ur ugarent ara 1 Mitre deg wakud dgi llant telmas n isekla i yugaren 30 m. Dɣa tilmas-a ur sseɣlayent ara [[iferr|iferran]] deg [[amwan|umwan]] di tamiwin anda yella unzwu [[anzwu amnummes|yemnummsen]] tilmas-a gant d [[ameɣlal n tizzegzut|timeɣlalin n tizzegzut]] maca deg yideggan [[asemmiṭ|isemmṭen]] amur ameqran n tilmas-a sseɣlayen-t iferr
+Isekla n wedren d tid ilan (yesɛan) tuggta meqqren deg wayen yezzin ɣef ubleɣ d tarrayt n wemɣay anda llant tmedkin ur ugarent ara 1 Mitre deg wakud dgi llant telmas n isekla i yugaren 30 m. Dɣa tilmas-a ur sseɣlayent ara [[iferr|iferran]] deg [[amwan|umwan]] di tamiwin anda yella unzwu [[Anezwu amnummes|yemnummsen]] tilmas-a gant d [[ameɣlal n tizzegzut|timeɣlalin n tizzegzut]] maca deg yideggan [[asemmiṭ|isemmṭen]] amur ameqran n tilmas-a sseɣlayen-t iferr
 
 == Aglam ==
 
