*Empty MediaWiki Message*

--- a/Anezwu.mw
+++ b/Anezwu.mw
@@ -16,11 +16,11 @@ Llan-t 9 n telmas n unezwu di [[tagnit|tegnit]]:
 * [[Anezwu amezzay]]
 * [[Anezwu adu-mezzay]]
 
-== Tilmas n inezwa tidaslanin ==
-Llan 3 n [[anezwu|inezwa]] d [[adaslan|idaslanen]]:
+== Tilmas n inezwa tigejdanin ==
+Deg [[Tagnit|Tegnit]] llan 3 n [[anezwu|inezwa]] d igejdanen s unect n [[Tasartut tanezwayt n Köppen|usismel anezway n Köppen]]:
 
 * [[Anezwu amnummes]]
-*[[Anezwu azaɣlan]]
+* [[Anezwu azaɣlan|Anezwu azeɣlan]]
 * [[Anezwu asemmaṭ]]
 
 == Asnifel n unezwu ==
