*Empty MediaWiki Message*

--- a/Anezwu.mw
+++ b/Anezwu.mw
@@ -3,6 +3,19 @@
 
 '''Anezwu''' d [[tignewt|addad n unezwu]] deg kra n [[ideg|yideg]] deg [[Aseggas|useggas]].
 
+== Asismel anezway ==
+
+[[Tugna:MonthlyMeanT.gif|thumb|300px|Almes n wezɣal n tiggi n [[tagnit|tegnit]] i yal ayyur seg 1961 ar 1990, Annect-a d amedya ɣef wemgarad n unezwu s unect n yideg d [[tasemhuyt|tsumhuyt]]]] 
+
+* [[Anezwu asbegsan]]
+* [[Anezwu amsedrar]]
+* [[Anezwu aneẓraf]]
+* [[Anezwu amenẓaw]]
+* [[Anezwu asfaylu]]
+* [[Anezwu agraklan]]
+* [[Anezwu agarwan]]
+* [[Anezwu amezzay]]
+
 == Tilmas n unezwu == 
 Llan-t 9 n telmas n unezwu di [[tagnit|tegnit]]:
 
