*Empty MediaWiki Message*

--- a/Anezwu.mw
+++ b/Anezwu.mw
@@ -42,3 +42,6 @@ Deg [[Tagnit|Tegnit]] llan 3 n [[anezwu|inezwa]] d igejdanen s unect n [[Tasartu
 *[[Tagnit]]
 *[[Adfel]]
 *[[Agris]]
+
+[[Taggayt:Tasnazwu]]
+[[Taggayt:Tasnignewt]]
