--- a/Anezwu.mw
+++ b/Anezwu.mw
@@ -43,5 +43,5 @@ Deg [[Tagnit|Tegnit]] llan 3 n [[anezwu|inezwa]] d igejdanen s unect n [[Tasartu
 *[[Adfel]]
 *[[Agris]]
 
-[[Taggayt:Tasnazwu]]
+[[Taggayt:Tasnezwit]]
 [[Taggayt:Tasnignewt]]
