*Empty MediaWiki Message*

--- a/Anezwu_asbegsan.mw
+++ b/Anezwu_asbegsan.mw
@@ -1,6 +1,6 @@
-[[Tugna:Koppen World Map Af.png|thumb|300px|Idgan dgi yettili unezwu asbegsan]]
+[[Tugna:Koppen World Map Af.png|thumb|300px|Ideggan anda yettili unezwu asbegsan]]
 
-'''Anezwu asbegsan''' (Yettusma ar [[Asebger]]) d [[anezwu] id yezgan deg tlemmast n [[tagnit|tegnit]] gar n sin [[ijeṛdan n tehri]] 10 [[agafa]] d [[aneẓẓul|uneẓẓul]] yettwasen s wezɣal d walluy n [[Taseddart|tiseddarin]] s teɣzi n useggas, d [[tuget]] n [[ageffur|ugeffur]] ayen ara ad issemɣin [[Tiẓgi tasbegsant|tiẓegwa tisbegsatin]], [[Tiẓgi n Amaẓun]] d tin yettwassen yakk gar-asen-t
+'''Anezwu asbegsan''' (Yettusma ar [[Asebges|usebges]]) d [[anezwu] id yezgan deg tlemmast n [[tagnit|tegnit]] gar n sin [[ijeṛdan n tehri]] 10° ar [[agafa|ugafa]] d [[aneẓẓul|uneẓẓul]], yettwasen s wezɣal d walluy n [[Taseddart|tseddarin]] s teɣzi n useggas, d [[tuget]] n [[ageffur|ugeffur]] ayen yettaǧǧan  [[Tiẓgi tasbegsant|tiẓegwa tisbegsatin]] ugtent deg yideggan-nni, [[Tiẓgi n Amaẓun]] d tin yettwassen yakk gar-asent
 
 == Idgan n unezwu-a ==
 Yettili deg ugafa n [[Marikan n wadda]], timura n [[Aneẓul n usamar n Asya]], [[Sudan]], [[Tafriqt talemmast]] d [[Ɣinya tamaynut]]
