*Empty MediaWiki Message*

--- a/Anezwu_asbegsan.mw
+++ b/Anezwu_asbegsan.mw
@@ -2,7 +2,7 @@
 
 '''Anezwu asbegsan''' (Yettusma ar [[Asebges|usebges]]) d [[anezwu]] id yezgan deg tlemmast n [[tagnit|tegnit]] gar n sin [[ijeṛdan n tehri]] 10° ar [[agafa|ugafa]] d [[aneẓẓul|uneẓẓul]], yettwasen s wezɣal d walluy n [[Taseddart|tseddarin]] s teɣzi n useggas, d [[tuget]] n [[ageffur|ugeffur]] ayen yettaǧǧan  [[Tiẓgi tasbegsant|tiẓegwa tisbegsatin]] ugtent deg yideggan-nni, [[Tiẓgi n Amaẓun]] d tin yettwassen yakk gar-asent
 
-== Idgan n unezwu-a ==
-Yettili deg ugafa n [[Marikan n wadda]], timura n [[Aneẓul n usamar n Asya]], [[Sudan]], [[Tafriqt talemmast]] d [[Ɣinya tamaynut]]
+== Ideggan n unezwu-a ==
+Yettili deg ugafa n [[Tamrikt n Wenẓul]], timura n [[Aneẓul n usamar n Asya]], [[Sudan]], [[Tafriqt talemmast]] d [[Ɣinya tamaynut]]
 
 == Ẓeṛ daɣen ==
