*Empty MediaWiki Message*

--- a/Anezwu_asbegsan.mw
+++ b/Anezwu_asbegsan.mw
@@ -6,3 +6,6 @@
 Yettili deg ugafa n [[Tamrikt n Wenẓul]], timura n [[Aneẓul n usamar n Asya]], [[Sudan]], [[Tafriqt talemmast]] d [[Ɣinya tamaynut]]
 
 == Ẓeṛ daɣen ==
+
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
