*Empty MediaWiki Message*

--- a/Anezwu_aneẓraf.mw
+++ b/Anezwu_aneẓraf.mw
@@ -2,7 +2,7 @@
 {{legend|#FE0000|[[Anezwu aneẓraf azeɣlan]] (BWh)}}
 {{legend|#FE9695|[[Anezwu aneẓruf asemmaṭ]] (BWk)}}]]
 
-'''Anezwu aneẓraf''' d yiwen n welmes neɣ n unaw n [[anezwu|inezwa]] yettilin di [[Taneẓruft|tniriwin]] yettwassen s [[Tadersi|tdersi]] (lqella) n [[ageffur|ugeffur]] d [[aman|waman]] dges imi azal n ugeffur id yetteɣlayen dges gar n 25 ar300 mm Kan, d ayen ur yettaǧǧan ara [[imɣan]] d [[aseklu|isekla]] ad mɣin anagar kra n [[Talmest|talmest]] izemren ad idiren deg waddaden n [[takewt]]
+'''Anezwu aneẓraf''' d yiwet n telmest n [[anezwu|unezwu]] yettilin di [[Taneẓruft|tniriwin]] yettwassen s [[Tadersi|tdersi]] (lqella) n [[ageffur|ugeffur]] d [[aman|waman]] deg-sent imi azal n ugeffur id yetteɣlayen dges gar n 25 ar 300 mm Kan, anecta d ayen ur yettaǧǧan ara [[imɣan]] d [[aseklu|isekla]] ad mɣin anagar kra n [[Talmest|talmest]] izemren ad idiren deg waddaden n [[takewt|uɣurar]]
 
 == Ẓeṛ daɣen == 
 
