--- a/Anezwu_aneẓraf.mw
+++ b/Anezwu_aneẓraf.mw
@@ -4,12 +4,15 @@
 
 '''Anezwu aneẓraf''' d yiwet n telmest n [[anezwu|unezwu]] yettilin di [[Taneẓruft|tniriwin]] yettwassen s [[Tadersi|tdersi]] (lqella) n [[ageffur|ugeffur]] d [[aman|waman]] deg-sent imi azal n ugeffur id yetteɣlayen dges gar n 25 ar 300 mm Kan, anecta d ayen ur yettaǧǧan ara [[imɣan]] d [[aseklu|isekla]] ad mɣin anagar kra n [[Talmest|talmest]] izemren ad idiren deg waddaden n [[takewt|uɣurar]]
 
+== Anezwu aneẓraf azeɣlan ==
+
+== Anezwu aneẓraf asemmaṭ ==
+
+
 == Ẓeṛ daɣen == 
 
 * [[Anezwu]]
-
-* [[Tiniri]]
-
-* [[Ageffur]]
-
 * [[Anezwu agraklan]]
+
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
