*Empty MediaWiki Message*

--- a/Anezwu_agraklan.mw
+++ b/Anezwu_agraklan.mw
@@ -1,4 +1,4 @@
-[[File:Koppen World Map C.png|upright=1.8|thumb|idgan dgi yettili unezwu agraklan
+[[File:Koppen World Map C.png|upright=1.8|thumb|ideggan anda yettili unezwu agraklan
 {{legend|#FFFF00|Anezwu agraklan s unebdu [[anezwu azeɣlan|yezɣel]] (Csa)}}
 {{legend|#C6C700|Anezwu agraklan s unebdu [[anzwu amnummes|amnummes]] (Csb)}}
 {{legend|#969600|Anezwu agraklan s unebdu [[anezwu asemmaṭ|asemmaṭ]] (Csc)}}]]
