--- a/Anezwu_agraklan.mw
+++ b/Anezwu_agraklan.mw
@@ -7,7 +7,8 @@
 
 == Ẓeṛ daɣen ==
 * [[Anezwu]]
-
 * [[Ilel agrakal]]
-
 * [[Anezwu amnummes]]
+
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
