*Empty MediaWiki Message*

--- a/Anezwu_amenẓaw.mw
+++ b/Anezwu_amenẓaw.mw
@@ -4,6 +4,10 @@
 
 == Inezwa yudsen (iqerben) ==
 
+== Tasemhuyt n tefsut d umwan ==
+
+== Tazrawt n unezwu ==
+
 == Ẓeṛ daɣen ==
 
 * [[Anezwu agraklan]]
