*Empty MediaWiki Message*

--- a/Anezwu_amenẓaw.mw
+++ b/Anezwu_amenẓaw.mw
@@ -11,7 +11,8 @@
 == Ẓeṛ daɣen ==
 
 * [[Anezwu agraklan]]
-
 * [[Anezwu aneẓraf]]
-
 * [[Anezwu]]
+
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
