*Empty MediaWiki Message*

--- a/Anezwu_amenẓaw_agrawi.mw
+++ b/Anezwu_amenẓaw_agrawi.mw
@@ -1,4 +1,4 @@
-[[Tugna:Koppen World Map Dfa Dwa Dsa Dfb Dwb Dsb.png|thumb|right|upright=2.25|idgan n unezwu amenẓaw agrawi]]
+[[Tugna:Koppen World Map Dfa Dwa Dsa Dfb Dwb Dsb.png|thumb|right|upright=2.25|ideggan n unezwu amenẓaw agrawi]]
 {{div col|colwidth=22em}}
 {{legend|#FF00FE|Dsa}}
 {{legend|#C600C7|Dsb}}
@@ -8,4 +8,4 @@
 {{legend|#38C7FF|[[#Koppen_Dfb|Dfb]]}}
 {{div col end}}
 
-'''Anezwu amenẓaw agrawi''' d [[anezwu]] yeṭṭafaren [[anezwu amenẓaw]], Azamul-is n [[tasartut tanezwayt n Köppen|Köppen]]: (''Askil amenzu'' D ''d usekkil wis 3 ad yili'' A ''neɣ'' B)
+'''Anezwu amenẓaw agrawi''' d [[anezwu]] afurkan yeṭṭafaren [[anezwu amenẓaw]], Azamul-is n [[tasartut tanezwayt n Köppen|Köppen]]: (''Askil amenzu'' D ''d usekkil wis 3 ad yili'' A ''neɣ'' B)
