*Empty MediaWiki Message*

--- a/Anezwu_amenẓaw_agrawi.mw
+++ b/Anezwu_amenẓaw_agrawi.mw
@@ -9,3 +9,12 @@
 {{div col end}}
 
 '''Anezwu amenẓaw agrawi''' d [[anezwu]] afurkan yeṭṭafaren [[anezwu amenẓaw]], Azamul-is n [[tasartut tanezwayt n Köppen|Köppen]]: (''Askil amenzu'' D ''d usekkil wis 3 ad yili'' A ''neɣ'' B)
+
+== Ideggan ==
+
+== Anebdu d tegrist ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
