*Empty MediaWiki Message*

--- a/Anezwu_amnummes.mw
+++ b/Anezwu_amnummes.mw
@@ -1,6 +1,6 @@
 [[Tugna:World Köppen Classification (with authors).svg|thumb|300px|Tagertilt n [[tasartut tanezwayt n Köppen]] tatrart]]
 
-'''Anezwu amnummes''' di [[tasnamurt]] d [[ijeṛdan n tehri]] itteqqnen [[tama tabegsant]] d [[tama tasafaylut]], Deg tamiwin-a ileff (iḍerru) wesmekles (ubeddel) d ameqran gar n [[Tasemhuyt|tsemhuyt]] d tayedṭ
+'''Anezwu amnummes''' di [[tasnamurt]] d [[ijeṛdan n tehri]] iy teqqnen [[Anezwu asbegsan|tama tabegsant]] ar [[anezwu asfaylu|tama tasafaylut]], Deg tamiwin-a ileffu (iḍerru) wesmekles (ubeddel) d ameqran gar n [[Tasemhuyt|tsemhuyt]] d tayeṭ
 
 == Idgan d inezwa ==
 * [[Anezwu agraklan]]
