*Empty MediaWiki Message*

--- a/Anezwu_amnummes.mw
+++ b/Anezwu_amnummes.mw
@@ -2,9 +2,9 @@
 
 '''Anezwu amnummes''' di [[tasnamurt]] d [[ijeṛdan n tehri]] iy teqqnen [[Anezwu asbegsan|tama tabegsant]] ar [[anezwu asfaylu|tama tasafaylut]], Deg tamiwin-a ileffu (iḍerru) wesmekles (ubeddel) d ameqran gar n [[Tasemhuyt|tsemhuyt]] d tayeṭ
 
-== Idgan d inezwa ==
+== inezwa ifurkanen ==
+Llan 3 n inawen deg unezwu amnummsan:
+
 * [[Anezwu agraklan]]
-
 * [[Anezwu agarwan]]
-
 * [[Anezwu amenẓaw]]
