*Empty MediaWiki Message*

--- a/Anezwu_amnummes.mw
+++ b/Anezwu_amnummes.mw
@@ -8,3 +8,9 @@ Llan 3 n inawen deg unezwu amnummsan:
 * [[Anezwu agraklan]]
 * [[Anezwu agarwan]]
 * [[Anezwu amenẓaw]]
+
+== Ideggan n unezwu amnummsan ==
+
+== Ẓeṛ daɣen ==
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
