*Empty MediaWiki Message*

--- a/Anezwu_amsedrar.mw
+++ b/Anezwu_amsedrar.mw
@@ -1,6 +1,6 @@
 [[Tugna:White Mountain CA.JPG|thumb|300px|Adrar d ideg dgi yettili unezwu amsedrar]]
 
-'''Anezwu amsedrar''' d [[Anezwu]] yettilin deg [[adrar|idurar]] di yal [[tama]] n [[tagnit|tegnit]], [[taseddart|Tiseddarin]] dges semmṭ-it s umata imi imi taseddart tameqrant deg [[Anebdu|unebdu]] ur tettezray ara (ur tetɛedday ara) 20°, Ma deg [[tagrest|tegrest]] tezmer ad tader ar -30° akken id yettili dges [[Azwu|uzwu]] d [[aṭu|waṭu]]
+'''Anezwu amsedrar''' d [[Anezwu]] yettilin deg [[adrar|idurar]] di yal [[tama]] n [[tagnit|tegnit]], [[taseddart|Tiseddarin]] deg-s semmṭ-it s umata imi taseddart tameqrant deg [[Anebdu|unebdu]] ur tettezray ara (ur tetɛedday ara) 20°, Ma deg [[tagrest|tegrest]] tezmer ad tader ar -30° akken id yettili deg-s [[Azwu|wezwu]] d [[aṭu|waṭu]]
 
 == Ẓeṛ daɣen == 
 * [[Anezwu]]
