*Empty MediaWiki Message*

--- a/Anezwu_amsedrar.mw
+++ b/Anezwu_amsedrar.mw
@@ -2,6 +2,8 @@
 
 '''Anezwu amsedrar''' d [[Anezwu]] yettilin deg [[adrar|idurar]] di yal [[tama]] n [[tagnit|tegnit]], [[taseddart|Tiseddarin]] deg-s semmṭ-it s umata imi taseddart tameqrant deg [[Anebdu|unebdu]] ur tettezray ara (ur tetɛedday ara) 20°, Ma deg [[tagrest|tegrest]] tezmer ad tader ar -30° akken id yettili deg-s [[Azwu|wezwu]] d [[aṭu|waṭu]]
 
+== ideggan n unezwu amsedrar ==
+
 == Ẓeṛ daɣen == 
 * [[Anezwu]]
 * [[Adfel]] 
