*Empty MediaWiki Message*

--- a/Anezwu_amezzay.mw
+++ b/Anezwu_amezzay.mw
@@ -5,4 +5,11 @@
 
 '''Anezwu amezzay''' d [[anezwu]] dgi id yetteɣlay [[ageffur|ugeffur]] s waṭas, [[Taseddart|tiseddarin]]-is ur d-tt-adrent ara s ddaw n 18°, Deg inezwa imezzayen llan-t kan snat (2) n [[Tasemhuyt|tisemhuyin]]: '''Tasemhuyt tagrawt''' d '''Tasemhuyt takiwant''',Deg yidgan dgi yettili unezwu-a ulac [[asemmiṭ]] neɣ [[adfel]]
 
-== Inawen n unezwu amezzay ==
+== Tilmas n unezwu amezzay ==
+
+== Ideggan ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
