*Empty MediaWiki Message*

--- a/Anezwu_adu-mezzay_agrawi.mw
+++ b/Anezwu_adu-mezzay_agrawi.mw
@@ -1,5 +1,14 @@
-[[Tugna:Koppen World Map Cwa Cfa.png|thumb|right|upright=1.8|''idgan n nezwu adu-mezzay agrawi.
+[[Tugna:Koppen World Map Cwa Cfa.png|thumb|right|upright=1.8|''ideggan n nezwu adu-mezzay agrawi.
 {{legend|#C6FF4E|Cfa}}
 {{legend|#96FF96|Cwa}}]]
 
 '''Anezwu adu-mezzay agrawi''' d [[anezwu]] dgi yettili [[Anebdu|unebdu]] d azeɣlan, Ma d [[tagrest]] s tamnummest, Anezwu-a yettili gar n [[ajeṛṛid n tehri|ijeṛdan n tehri]] 25° d 35° [[agafa]] d [[Aneẓẓul|uneẓẓul]], Azamul-is deg [[tasartut tanezwayt n Köppen]]: Cfa / Cwa
+
+== Asismel ==
+
+== Ideggan ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
