*Empty MediaWiki Message*

--- a/Anezwu_adu-safaylu.mw
+++ b/Anezwu_adu-safaylu.mw
@@ -15,4 +15,13 @@
 |}
 ]]
 
-'''Anezwu adu-safaylu''' neɣ '''Anezwu agafan''' d [[anezwu]] ilan (isɛan) [[tagrest]] d [[asemmiṭ|tasrmmaṭṭ]] d taɣezfant, Ma d [[Anebdu]] meẓẓey maca ur semmeṭ ara s waṭas, Anezwu-a yeṭṭafar [[anezwu asemmaṭ]] yettili gar [[ijeṛdan n tehri|ijeṛdan n tehri]] n 50° d 70° [[agafa]] d [[aneẓẓul|uneẓẓul]]
+'''Anezwu adu-safaylu''' neɣ '''Anezwu agafan''' d [[anezwu]] ilan (isɛan) [[tagrest]] d [[asemmiṭ|tasrmmaṭṭ]] d taɣezfant, Ma d [[Anebdu]] meẓẓey maca ur semmeṭ ara s waṭas, Anezwu-a yeṭṭafar [[anezwu asemmaṭ]] yettili gar [[ijeṛdan n tehri|ijeṛdan n tehri]] n 50° d 70° [[agafa]] d [[anẓul|unẓul]]
+
+== Asismel ==
+
+== Ideggan ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Asismel anezway n Köpen]]
+[[Taggayt:Anezwu]]
