*Empty MediaWiki Message*

--- a/Anezwu_agersan.mw
+++ b/Anezwu_agersan.mw
@@ -1,6 +1,6 @@
-[[Tugna:Oblique rays 04 Pengo.svg|thumb|250px|Tafat n tfukt tettas-d tmal af tzeglin n ugafa d tizgelt n wneẓẓul, ɣef aya idgan-a d isemmaṭen yal-ass]]
+[[Tugna:Oblique rays 04 Pengo.svg|thumb|250px|Tafat n tfukt tettas-d tmal af tizegt n ugafa d tizgelt n wenẓul, ɣef aya ideggan-a zgan d isemmaṭen deg yal akud]]
 
-'''Anezwu agersan''' d [[anezwu]] yeṭṭafaren [[anezwu asemmaṭ]] dgi tiseddarin n wezɣal drus kan id ttalin-t ar 0°, Yettili unezwu-a deg yedgan yudsen (iqerben) af tjummiwin tizeglin n [[Tizgelt n ugafa|ugafa]] d [[Tizgelt n wneẓẓ|uneẓul]] am: [[Grinland]], [[Alaska]] d [[Antraktika]]
+'''Anezwu agersan''' d [[anezwu]] afurkan yeṭṭafaren [[anezwu asemmaṭ]] anda tiseddarin n wezɣal drus kan n wakud id ttalin-t ar 0°, Yettili unezwu ayyi deg yideggan yudsen (iqerben) ar tjummiwin tizeglin n [[Tizgelt n ugafa|ugafa]] d [[Tizgelt n wenẓul|uneẓul]] am: [[Grinland]], [[Alaska]] d [[Antraktika]]
 
 == [[Tasna n wegris|Tasniwin tigersanin]] ==
 
