--- a/Ḥusni_Mubarak.mw
+++ b/Ḥusni_Mubarak.mw
@@ -1,2 +1,2 @@
 {{Infobox biography}}
-'''Muḥemmed Ḥusni Mubarak''' (محمد حسني مبارك) yella d aselway n Maṣer si 14 ktuber 1982 ar 11 furar 2011.
+'''MahmoudMohamed abu issa''' محمود محمدابودعيسى) yella d aselway n Maṣer si 14 ktuber 1982 ar 11 furar 2011.
