*Empty MediaWiki Message*

--- a/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
+++ b/Agraw_amatu_n_yeɣlanen_yeddukklen.mw
@@ -12,6 +12,7 @@ Deg iseggasen n 80, Agraw amatu yuɣal d annar i wdiwenni gar tmura n Ugafa d ti
 == Tikkest tamazrayt ==
 
 == Altaɣ ==
+Llant 193 n iwunak igan d igmamen deg wegraw amatu. S tmernit ar wanect-a, Agraw amatu yezmer ad yefk aglam n umanay i kra n tuddsa  tagreɣlant neɣ i kra n tmurt Ur nelli ara d agmam
 
 == Ihilen ==
 
