*Empty MediaWiki Message*

--- a/Adafal.mw
+++ b/Adafal.mw
@@ -1,5 +1,16 @@
 {{Databox}}
-{{Datastub}}
+'''Adafal''' neɣ '''Tasuflalt''' ([[Assaɣ ussnan]]: '''Hedera''') d [[Tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] izagiren (n lexla) neɣ yettwaẓẓun i [[imɣi n wedlag|wedlag]], Dɣa [[talmest (tasnudert)|talmest]] yettwassnen yakk tga d [[adafal imcebbeb]] 
+
+== Aglam ==
+
+== Tilmas tigejdanin ==
+Tilmas tigejdanin gant d:
+* [[Adafal imcebbeb]] — (''Hedera helix L'')
+* [[Adafal n iknaren]] — (''Hedera canariensis'')
+
+== Asexdem d iseqdac ==
+
+== Tiwlafin n telmas ==
 
 == Tilmas ==
 
