*Empty MediaWiki Message*

--- a/Adafal.mw
+++ b/Adafal.mw
@@ -12,10 +12,10 @@ Tilmas tigejdanin gant d:
 
 == Tiwlafin n telmas ==
 
-== Tilmas ==
+
 
 [[Tugna:Adafal 1.jpg|thumb|Hedera helix - Adafal<ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref>]]
-[[Tugna:Adafal 2.jpg|thumb|Hedera helix - Adafal]]
+[[Tugna:Adafal 2.jpg|thumb|Hedera helix - [[Adafal imcebbeb]]]]
 
 == Isseqdac ==
 
