*Empty MediaWiki Message*

--- a/Tasga_n_ṭṭlam.mw
+++ b/Tasga_n_ṭṭlam.mw
@@ -1,29 +1,4 @@
 '''''[[Tasga n ṭṭlam]]''''' n Ssaɛid Iɛemṛac
 
 
-Tasga n ṭṭlam d yiwen gar wungalen imeqwranen d-ureb tsekla taqbaylit tatrart. D ungal n [[Ssaɛid Iɛemṛac]] immuten send ad yeffeɣ wungal-a ines. Iğa yaɣ, ur yeḥḍir, ur iwala, ur iɣellet ayen issali s tidi-s.
-
-Am Belɛid At Ɛli, d tawenza-s is tt-yefkan, d aṭṭan it-izuɣṛen ar ddaw tmedlin kan akken d ameẓyan, kan akken s waffud d tebɣest-is. Maca, xas netta ulac-it ass-a, iğa yaɣ-d s wayen a t-id nesmetkay, s wayen ar as necfu.
-D tayri-s n tmaziɣt, d tayri n tira, n tsekla taqbaylit it-idegren, is ifkan affud yis iyewweḍ yura Tasga n ṭṭlam xas akken d amuḍin i yella.
-
-Di Tasga n ṭṭlam illa-d wawal akk ɣef temsal yettin ɣer tudart umaziɣ n wass-a. U Ssaɛid ur iffiẓ ara, ur icebbeḥ ara awal, inna-d srid ayen iwala di tudert, d tikli teddun yemdanen am netta ar idisan-is.
-
-Win iɣṛan Tasga n ṭṭlam igza d akken tiṭ n Ssaɛid mači d ttiṭ am tiyaḍ Tiṭ-is tẓer u tettwali. ɣur-s iẓri d tmuɣli d-ssufuɣen askud, ibedi amusnaw issargagayen u isargagin tizya-s.
-
-A wi yufan a-ɣ-d-yuɣal Ssaɛid neɣ, imahat, a-d-lalen wiyaḍ am netta !
-
-Taɣuṛi igerzen !
------------------------------------------
-Tagemt seg : http://www.imyura.net/Ungalen/tabid/58/articleType/ArticleView/articleId/139/Tasga-n-ttlam-n-Ssaid-Iemac.aspx
-
-Tudert n Ssɛid Iɛemṛac
-http://www.artmajeur.com/?go=user_pages/bio&login=gaya&artist_id=25698
-
-
-
-
-'''''[[La Dépêche de Kabylie: Dacu i yezwaren a t-ig wumdan i tutlayt-a ?']]''''
-
-Smail Meğber: ... Mas Rezki Issiaxem, deg tezwart yura i wedlis n Saɛid Iɛemrac, Tasga n Ṭlam i d-yeffɣen seg mi yewweḍ anda a naweḍ, yenna : « S tɣuri n ungalen am wa s wayes ad yemɣur ucihwi n tɣuri n wayen ittwarun s tutlayt-nneɣ, daɣen s wayes a neḍeggeṛ tikerkas n tesɣart tucmit tasqurmaṭ i s-d-iṣaḥen. »
-
-Tagemt seg : http://www.imyura.net/Acmumeh/tabid/62/articleType/ArticleView/articleId/213/Default.aspx
+Tasga n ṭṭlam d yiwen gar [[ungal|wungalen]] imeqqranen d-ureb [[tasekla|tsekla]] Taqbaylit tatrart. D ungal n [[Ssaɛid Iɛemṛac]] immuten send n tuffeɣa n wungal-a ynes.
