*Empty MediaWiki Message*

--- a/Tasga_n_ṭṭlam.mw
+++ b/Tasga_n_ṭṭlam.mw
@@ -1,4 +1,1 @@
-'''''[[Tasga n ṭṭlam]]''''' n Ssaɛid Iɛemṛac
-
-
-Tasga n ṭṭlam d yiwen gar [[ungal|wungalen]] imeqqranen d-ureb [[tasekla|tsekla]] Taqbaylit tatrart. D ungal n [[Ssaɛid Iɛemṛac]] immuten send n tuffeɣa n wungal-a ynes.
+'''Tasga n ṭṭlam''' d yiwen gar [[ungal|wungalen]] imeqqranen d-ureb [[tasekla|tsekla]] Taqbaylit tatrart id yura [[Ssaɛid Iɛemṛac]] immuten send n tuffeɣa n wungal-a ynes.
