*Empty MediaWiki Message*

--- a/Tameṭṭut_di_Tesga_n_ṭṭlam.mw
+++ b/Tameṭṭut_di_Tesga_n_ṭṭlam.mw
@@ -1,5 +1,6 @@
 [[Tugna:Said%2BIamrache-livre.jpg|right|250px|Tameṭṭut di Tesga n ṭṭlam]] 
-'''Tameṭṭut di Tesga n ṭṭlam ''' n [[Ssaɛid Iɛemṛac]] d [[ungal]] yerra-d s tmeṭṭut ittwassnen si yal tamurt, s yisem-is d tufrikt. Tettunefk neɣ tettwaqqen d yal [[ajjed|asɣan]] i d-yusan, tettamen s kra ɣef i s nnan ɣas akken nettat ur tt-ttamnen ara. Ulac uɣilif d ayen illan kan ay yellan. Ɣur-s tamuɣli s wallen-is am tmuɣli imelsi neɣ tinna n uɣersiw agugam, melmi iteddu ad yennefk d asfel. Udem-is am tfelwit iɣef yura wayen yuran. Yal ticredt tezzumel aktay, s tfekka teqqur tezza, tesknef-itt tallit ur tettukennay ara, la ɣer [[taɛṛabt|Tserɣint]] wala ɣer [[tafransist|tefṛunsist]]. D tafekka n tmeṭṭut i d-yettunefken sɣur wakal n Tmazɣa.” [sbt.98] 
+
+''''Tameṭṭut di Tesga n ṭṭlam''' n [[Ssaɛid Iɛemṛac]] d [[ungal]] yerra-d s tmeṭṭut ittwassnen si yal tamurt, s yisem-is d tufrikt. Tettunefk neɣ tettwaqqen d yal [[ajjed|asɣan]] i d-yusan, tettamen s kra ɣef i s nnan ɣas akken nettat ur tt-ttamnen ara. Ulac uɣilif d ayen illan kan ay yellan. Ɣur-s tamuɣli s wallen-is am tmuɣli imelsi neɣ tinna n uɣersiw agugam, melmi iteddu ad yennefk d asfel. Udem-is am tfelwit iɣef yura wayen yuran. Yal ticredt tezzumel aktay, s tfekka teqqur tezza, tesknef-itt tallit ur tettukennay ara, la ɣer [[taɛṛabt|Tserɣint]] wala ɣer [[tafransist|tefṛunsist]]. D tafekka n tmeṭṭut i d-yettunefken sɣur wakal n Tmazɣa.” [sbt.98] 
 Neẓra d akk-en Tasga n ṭṭlam tezzin aṭas ɣef tikli n wergaz ger yergazen, imi d netta i yewwin tamasit ɣef udabu s umata, tamasit ɣef ubeddel n tegnatin, tamasit ɣef tudert d tiddin ɣer sdat… s wudem arusrid i tettekki tameṭṭut ula n nettat deg way-a s tmasiyin-is; “medden” yemmal imdanen i deg yesseday tameṭṭut s timmad-is. Maca amalay yewwi-tt ɣef wunti ilmend n wesdukel n wergaz d tmeṭṭut ɣef yiwet n tekti deg yiwet n tegnitt. 
 
 Isuyas n wungal wwin-d ɣef tmeddurt n yemdanen tamirant n twinest-agi yezrin d wamek i tedda d wamek yessefk ad teddu : d tameddurt n tmetti m-tnemgalin. Ger tikli n Muḥend-Akli d way-en s temmal twacult-is tameqrant : taddart; ger tmuɣli n yelmeẓyen d tin n yemɣaren; ger tmeddurt n wid ilan d tmeddurt n wid ur nli kra; ger tudert deg wanguzen d tudert deg wemqelleɛ d usirem… Ɣef wakk-en walaɣ s umata, tikti tigejdit abeddel n way-en icemten iteddu yakan s way-en yelhan ssaramen ɣer-s. Deg way-a, ungal ur yeffiɣ ara i tilawt d tirga d usirem. Yessers-ed tawacult s iɛeggalen-is ɣer wawal, yesnerna-ten, yessedda-ten, yessemṣendaḥ-iten s tnemgalin d wurfan d tedyanin nsen. Ma nemmeslay-ed ɣef tmeṭṭut deg wungal, yessefk awal ɣef twacult meṛṛa anagar irgazen imi nutni d tikliwin nsen d ul n wungal yesni fell-asen d yis-sen. Acku d ungal n temsal n imeqqranen… ma d wiyaḍ d ugar n wawal. Yal yiwen d amek tettwali ɣer-s tmetti : Llufan (4 tikal), ladɣa ma d aqcic, d asali yelhan; d lfal swayes feṛṛḥen ak at taddart. D amaynut n tudert i tudert. D aneglus n leɛnaya i wid meqqren mgal tixnanasin nsen. D azamul n tezdeg d timmelsit.
