*Empty MediaWiki Message*

--- a/Tameṭṭut_di_Tesga_n_ṭṭlam.mw
+++ b/Tameṭṭut_di_Tesga_n_ṭṭlam.mw
@@ -26,17 +26,9 @@ Ma d Salima tineslemt, i uwanes d tarrawt, d aẓar n Muḥend Akli d watmaten-i
 
 D taɛebbajt tfukk awal i wergaz-is : “… D tameṭṭut am nek i ken iṛebban armi tmeqqrem, tuɣalem ... ur yelli usekkud ... i d awen d-yennan ɣurwat tameṭṭut d nettat i d Cciṭan. Tameṭṭut d tamurt, yess i tellam, fell-as i tebnam. Ma tesmenttem-tt ad aken tesmentet tmurt nwen, ... Tameṭṭut tettunefk-awen-d d tayri, mačči d tayaziḍt i tmellalin. … Irwi-yak akw allaɣ-ik Ccix Ɛmeṛ, ur d ak d-yeǧǧi iẓri i s ara teẓreḍ, ikkes-ak allen-ik, tettedduḍ s warquqen-is … Ayen? Ɛni ur zeddigit ara yeɣsan-ik i wakken a ten id-tessirdeḍ? niɣ qqaren lḥiǧ sdat tewwurt… Ur lliɣ ara d yelli-s n teḍsa i wakken ad sselmadeɣ imelsiyen! neɣ d aɣyul i d-yeǧǧan taḍsa....” [sbt.14-16]; i Ccix Ɛmeṛ “… ɣer tneggura-yagi ifukk way-en zeddigen gara-neɣ. Ɛli Bu-Tlufa issen kan tid iɣef yecfa, tid-en yeɣra di ǧamaɛ, sdat n tewwurt. Dayemmi yettwali kan ɣer tqamumt n tinzert-is. Melmi i t ugarent tlufa a d-ittmekti di tmucuha. Timucuha irran Muḥend Akli d akli. Timucuha irran tayemmatt d tayaziḍt. Timucuha izeṭṭen taɛeddawit ger watmaten. Timucuha iwwin amdan ɣer yilem... Tamacahutt n Qurraḍ, agellid iderwicen” [sbt.20].
 
-Awal n taggara d ay-en yura dda Ssaɛid Iɛemṛac ɣef tmeṭṭut s umata : “… d nettat kan ay d nettat, ɣas ma tayri-s ihudd-as-tt laẓ, ɣas ma tettarew i ṭṭrad neɣ i lɣerba. Ma ur telli d ta ad tili d ta, maca d nettat kan ay d nettat. Ɣas ma tettarew teskar-ed, tessinin. Taggara, zgan-d i wiyaḍ, ttmettaten ɣef wiyaḍ, am tɣawsiwin useqdec. Salima tezga tessaram, tezga tegguni, tegguni ‘wissen’... Tunez-as i way-en ur nelli, tunez-as i way-en i tt yerẓan, mazal tessaram, tegguni wissen... Tedder tameddurt n tɣulaḍ, siwa taɣalaḍt ɣer weltma-s. Tewḥel deg irebbi n leqrun am tzizwit deg uzeṭṭa n tissist. Mazal tessaram tegguni, tegguni ‘wissen’... Tessaram ay-en ur teṛwi di tmeddurt-is i wakken a t ṛwun warraw-is.” [sbt.100]. 
-
-<poem>
-"Ɛyut di lbaṭel, ɛyut!
-Fakket di lebḥeṛ akraz;
-Argaz illa s tmeṭṭut,
-Tameṭṭut tella s wergaz.
-Deg webrid n tidett ddut.
-Tezri tallit n uɛekkaz." [sbt.26].
-</poem>
 
 
-Sɣur [[Nnaṣer Uqemmum]]
+
+
 [[Taggayt:Tasekla]]
+[[Taggayt:ungal]]
