--- a/Itran_n_Imucaɣ.mw
+++ b/Itran_n_Imucaɣ.mw
@@ -1,4 +1,4 @@
-[[Imucaɣ]], [[tamusni]]-nsen af [[itri|yetran]] d tameqrant, imi d itran ay tn-iheddun asmi ttinigen deg lxali. Ula d Imucaɣ ufan deg [[igenni]] igrawen neɣ ''tirebuyaɛ''  n yetran yecban zund kra n tteṣṣwiṛat, am wakken i t-xedmen si zik [[agdud|igduden]] nniḍen deg [[tamurt|tmura]] nniḍen. Lɛibad neɣ lḥiwan neɣ tiɣawsiwin ẓran deg igenni, yal yiwen deg-sen yesɛa [[tadyant]]-is.
+'''imanaren n imucaɣ''' d [[tamusni]] n [[Imucaɣ]] af [[itri|yetran]] imi d itran i d-it-nerren (id t-niheddun) mi ara ad ttinigen deg [[taneẓruft|tniriwin]]. Ula d Imucaɣ ufan deg [[igenni]] igrawen  n yetran yecban zund kra n tugniwin, am akken i t-xedmen si zik [[aɣref|iɣerfan]] niden.
 
 == tirbaɛin n yetran ==
 [[Image:Finding arcturus.png|thumb|right|350px|Itran imeqqranen iweṣṣfen "talɣemt": sbaɛ yetran n ''[[Ursa Maior]]'' rnu-yasen [[Arcturus|Arcturus]]. Lxeṭṭ yesdukulen akasrun d ''Arcturus'' yettban am yiri-s gezzifen iqewwsen.]]
