*Empty MediaWiki Message*

--- a/Itran_n_Imucaɣ.mw
+++ b/Itran_n_Imucaɣ.mw
@@ -1,6 +1,6 @@
 '''imanaren n imucaɣ''' d [[tamusni]] n [[Imucaɣ]] af [[tazdemt|tzedmin]] d [[itri|yetran]] imi d itran i d-it-nerren (id t-niheddun) mi ara ad ttinigen deg [[taneẓruft|tniriwin]]. Ula d Imucaɣ ufan deg [[igenni]] igrawen  n yetran yecban zund kra n tugniwin, am akken i t-xedmen si zik [[aɣref|iɣerfan]] niden.
 
-== tirbaɛin n yetran ==
+== Tifrawin n tzedmin ==
 [[Image:Finding arcturus.png|thumb|right|350px|Itran imeqqranen iweṣṣfen "talɣemt": sbaɛ yetran n ''[[Ursa Maior]]'' rnu-yasen [[Arcturus|Arcturus]]. Lxeṭṭ yesdukulen akasrun d ''Arcturus'' yettban am yiri-s gezzifen iqewwsen.]]
 * '''[[Ursa Maior|Ursa Maior]]''' = ''talämt'' ([[alɣem|talɣemt]]), deg-s 9 yetran neɣ akter: 
 ** 4 yetran n ukasrun ("la casserole") = ''iḍarren wi n eleqqam'' (tadawt, iḍarren ineggura) ak° d ''shiwa'' (iḍarren imezwura)
