--- a/Itran_n_Imucaɣ.mw
+++ b/Itran_n_Imucaɣ.mw
@@ -1,4 +1,4 @@
-'''imanaren n imucaɣ''' d [[tamusni]] n [[Imucaɣ]] af [[tazdemt|tzedmin]] d [[itri|yetran]] imi d itran i d-it-nerren (id t-niheddun) mi ara ad ttinigen deg [[taneẓruft|tniriwin]]. Ula d Imucaɣ ufan deg [[igenni]] igrawen  n yetran yecban zund kra n tugniwin, am akken i t-xedmen si zik [[aɣref|iɣerfan]] niden.
+'''Tezedmin n imucaɣ''' d [[tamusni]] n [[Imucaɣ]] ɣef [[tazdemt|tzedmin]] d [[itri|yetran]] imi d itran i d-t-nittanren (id t-niheddun) mi ara ad ttinigen deg [[taneẓruft|tniriwin]]. Ula d Imucaɣ ufan deg [[igenni]] igrawen  n yetran yecban zund kra n tugniwin, am akken i t-xedmen si zik [[aɣref|iɣerfan]] niden.
 
 == Tifrawin n tzedmin ==
 [[Image:Finding arcturus.png|thumb|right|350px|Itran imeqqranen iweṣṣfen "talɣemt": sbaɛ yetran n ''[[Ursa Maior]]'' rnu-yasen [[Arcturus|Arcturus]]. Lxeṭṭ yesdukulen akasrun d ''Arcturus'' yettban am yiri-s gezzifen iqewwsen.]]
